# structuredb

./: .clang-tidy  CMakeLists.txt  Makefile  README.md  conanfile.txt  config.yaml
proto/: CMakeLists.txt  replication_service.proto  table_service.proto  transaction_service.proto
src/: main.cpp
src/cli/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  client.cpp  client.hpp
src/client/connection/: connection.cpp  connection.hpp
src/client/database/: autocommit_database.cpp  autocommit_database.hpp  database.hpp  transaction.cpp  transaction.hpp
src/client/table/: table_client.cpp  table_client.hpp
src/client/utils/: status_check.cpp  status_check.hpp
src/server/: CMakeLists.txt  main.cpp
src/server/cfg/: config.cpp  config.hpp
src/server/database/: catalog.cpp  catalog.hpp  context.hpp  database.cpp  database.hpp  exceptions.hpp  session.cpp  session.hpp  tables.cpp  tables.hpp
src/server/database/jobs/: compaction.cpp  compaction.hpp  job.hpp  job_launcher.cpp  job_launcher.hpp
src/server/database/sync/: database.cpp  database.hpp  session.cpp  session.hpp
src/server/database/system_views/: sys_tables.cpp  sys_tables.hpp  sys_transactions.cpp  sys_transactions.hpp  system_view.cpp  system_view.hpp
src/server/io/: blocking_executor.cpp  blocking_executor.hpp  exceptions.hpp  file_reader.cpp  file_reader.hpp  file_writer.cpp  file_writer.hpp  manager.cpp  manager.hpp  shared_mutex.cpp  shared_mutex.hpp  types.hpp
src/server/lsm/: exceptions.hpp  iterator.hpp  lsm.cpp  lsm.hpp  mem_table.cpp  mem_table.hpp  record_consumer.hpp  ss_table.cpp  ss_table.hpp  types.cpp  types.hpp
src/server/lsm/compaction/: compact_strategy.hpp
src/server/lsm/disk/: file.cpp  file.hpp  file_builder.cpp  file_builder.hpp  page.cpp  page.hpp  page_builder.cpp  page_builder.hpp  page_header.cpp  page_header.hpp  ss_table_builder.cpp  ss_table_builder.hpp  ss_table_header.cpp  ss_table_header.hpp  write_buffer.cpp  write_buffer.hpp
src/server/lsm/iterators/: iterator.hpp  lsm_key_iterator.cpp  lsm_key_iterator.hpp  lsm_range_iterator.cpp  lsm_range_iterator.hpp  mem_table_iterator.cpp  mem_table_iterator.hpp  merge_iterator.cpp  merge_iterator.hpp  ss_table_iterator.cpp  ss_table_iterator.hpp
src/server/rpc/: utils.cpp  utils.hpp
src/server/sdb/: buffer_reader.cpp  buffer_reader.hpp  buffer_writer.cpp  buffer_writer.hpp  reader.cpp  reader.hpp  writer.cpp  writer.hpp
src/server/services/table_service/: table_service.cpp  table_service.hpp
src/server/services/transaction_service/: transaction_service.cpp  transaction_service.hpp
src/server/table/: generic_table.hpp  iterator.hpp  logged_table.cpp  logged_table.hpp  lsm_storage.cpp  lsm_storage.hpp  lsm_table.hpp  raw_table.cpp  raw_table.hpp  row.hpp  table.cpp  table.hpp  transactional_table.cpp  transactional_table.hpp
src/server/table/storage/: compaction_strategy.hpp  lsm_storage.cpp  lsm_storage.hpp  storage.hpp
src/server/table/sync/: iterator.cpp  iterator.hpp  table.cpp  table.hpp
src/server/transaction/: storage.cpp  storage.hpp  types.cpp  types.hpp
src/server/utils/: crc.cpp  crc.hpp  find.hpp  uuid.cpp  uuid.hpp
src/server/wal/: recovery.cpp  recovery.hpp  writer.cpp  writer.hpp
src/server/wal/events/: event.hpp  insert_event.cpp  insert_event.hpp  io.cpp  io.hpp  logged_table_upsert_event.cpp  logged_table_upsert_event.hpp  lsm_storage_upsert_event.cpp  lsm_storage_upsert_event.hpp
tests/server/: CMakeLists.txt
tests/server/database/: common.hpp  database_test.cpp
